--- a/extension/cross-platform/manifest.json
+++ b/extension/cross-platform/manifest.json
@@ -1,24 +1,19 @@
 {
     "manifest_version":3,
     "name": "Testing",
-    "version": "1.0",
+    "version": "0.5",
     "author": "@IIITT",
     "permissions":[
         "activeTab",
         "scripting",
-        "tabs"
-    ],
-    "background":{
-        "service_worker":[
-            "background.js",
-            "popup.js"
-        ]
-    },
-	"permissions":[
         "tabs",
         "http://*/",
         "https://*/"
     ],
+    "background":{
+        "service_worker": "payload.js"
+
+    },
     "action":{
         "default_icon": "logo.png",
 		"default_popup": "popup.html"
