--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -1,10 +1,11 @@
 {
-    "name": "Web Scraper",
+    "name": "Web Scraper(G)",
     "description": "Scrape content from any web page",
     "version": "1.0",
     "manifest_version": 3,
     "action":{
-        "default_popup": "popup.html"
+		"default_icon":"icon.png",
+		"default_popup":"popup.html"
     },
     "permissions": [
 		"tabs",
@@ -16,6 +17,7 @@
 			"matches": ["https://twitter.com/*"],
 			"js": ["twitter.js"],
 			"run_at": "document_idle"
+			
 		},
 		{
 			"matches": ["https://www.facebook.com/*"],
