--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -23,7 +23,18 @@
 			"matches": ["https://www.facebook.com/*"],
 			"js": ["facebook.js"],
 			"run_at": "document_idle"
+		},
+		{
+			"matches": ["https://www.thehindu.com/.+/",
+			"https://timesofindia.indiatimes.com/.+/",
+			"https://indianexpress.com/.+/",
+			"https://www.hindustantimes.com/.+/"
+		],
+			"js":["news_article.js"],
+			"run_at":"document_idle"
 		}
+		
+
 	],
 	"background": {
 		"service_worker": "background.js"
