--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,8 @@
 Django>=4.0
 
 #Communications
-Django-REST-framework>=3.14
-Django-CORS-headers>=3.8
+djangorestframework>=3.14
+django-cors-headers>=3.8
 requests>=2.28
 
 #Credentials
