Update manifest.json - Declared news_site.js

--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -21,6 +21,12 @@
 			"matches": ["https://www.facebook.com/*"],
 			"js": ["facebook.js"],
 			"run_at": "document_idle"
+		},
+		{
+			"matches": ["https://*/*"],
+			"exclude_matches": ["https://twitter.com/*", "https://www.facebook.com/*"],
+			"js": ["news_site.js"],
+			"run_at": "document_idle"
 		}
 	],
 	"background": {
