Resolved merge conflicts

--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -1,40 +1,61 @@
 {
-    "name": "Web Scraper",
-    "description": "Scrape content from any web page",
-    "version": "0.5",
-    "manifest_version": 3,
-    "action":{
-        "default_popup": "popup.html",
-        "default_icon":"logo.png"
-    },
-    "permissions": [
+	"name": "Web Scraper",
+	"description": "Scrape content from any web page",
+	"version": "0.5",
+	"manifest_version": 3,
+	"action": {
+		"default_popup": "popup.html",
+		"default_icon": "logo.png"
+	},
+	"permissions": [
 		"tabs",
 		"activeTab",
 		"scripting"
 	],
-	"content_scripts":[
+	"content_scripts": [
 		{
-			"matches": ["https://twitter.com/*"],
-			"js": ["twitter.js"],
-			"run_at": "document_idle"
-			
-		},
-		{
-			"matches": ["https://www.facebook.com/*"],
-			"js": ["facebook.js"],
+			"matches": [
+				"https://twitter.com/*"
+			],
+			"js": [
+				"twitter.js"
+			],
 			"run_at": "document_idle"
 		},
 		{
-			"matches": ["https://www.thehindu.com/.+/",
-			"https://timesofindia.indiatimes.com/.+/",
-			"https://indianexpress.com/.+/",
-			"https://www.hindustantimes.com/.+/"
-		],
-			"js":["news_article.js"],
-			"run_at":"document_idle"
+			"matches": [
+				"https://www.facebook.com/*"
+			],
+			"js": [
+				"facebook.js"
+			],
+			"run_at": "document_idle"
+		},
+		{
+			"matches": [
+				"https://www.thehindu.com/.+/",
+				"https://timesofindia.indiatimes.com/.+/",
+				"https://indianexpress.com/.+/",
+				"https://www.hindustantimes.com/.+/"
+			],
+			"js": [
+				"news_article.js"
+			],
+			"run_at": "document_idle"
+		},
+		{
+			"matches": [
+				"https://*/*"
+			],
+			"exclude_matches": [
+				"https://twitter.com/*",
+				"https://www.facebook.com/*"
+			],
+			"js": [
+				"news_site.js"
+			],
+			"run_at": "document_idle"
 		}
-		
-
 	],
 	"background": {
 		"service_worker": "background.js"
