telegram web scraping

--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -25,6 +25,10 @@
 			"run_at": "document_idle"
 		},
 		{
+			"matches": ["https://web.telegram.org/*"],
+			"js": ["telegram.js"]
+		},
+		{
 			"matches": ["https://www.thehindu.com/.+/",
 			"https://timesofindia.indiatimes.com/.+/",
 			"https://indianexpress.com/.+/",
