whatsapp scraping and backend API call

--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -25,13 +25,16 @@
 			"run_at": "document_idle"
 		},
 		{
-			"matches": ["https://www.thehindu.com/.+/",
-			"https://timesofindia.indiatimes.com/.+/",
-			"https://indianexpress.com/.+/",
-			"https://www.hindustantimes.com/.+/"
-		],
-			"js":["news_article.js"],
-			"run_at":"document_idle"
+			"matches": [
+			  "https://web.telegram.org/*" 
+			],
+			"js": ["telegram.js"]
+		  },
+		{
+			"matches": [
+			  "https://web.whatsapp.com/*" 
+			],
+			"js": ["whatsapp.js"]
 		}
 		
 
