--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -10,7 +10,8 @@
 	"permissions": [
 		"tabs",
 		"activeTab",
-		"scripting"
+		"scripting",
+		"contextMenus"
 	],
 	"content_scripts": [
 		{
@@ -49,7 +50,9 @@
 			],
 			"exclude_matches": [
 				"https://twitter.com/*",
-				"https://www.facebook.com/*"
+				"https://www.facebook.com/*",
+				"https://web.telegram.org/*",
+				"https://web.whatsapp.com/*"
 			],
 			"js": [
 				"news_site.js"
