--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -10,7 +10,8 @@
 	"permissions": [
 		"tabs",
 		"activeTab",
-		"scripting"
+		"scripting",
+		"storage"
 	],
 	"content_scripts": [
 		{
@@ -73,5 +74,8 @@
 	],
 	"background": {
 		"service_worker": "background.js"
+	},
+	"content_security_policy": {
+		"extension_pages": "default-src 'self'; connect-src http://127.0.0.1:8000"
 	}
 }
