--- a/extension/cross-platform/manifest.json
+++ b/extension/cross-platform/manifest.json
@@ -31,7 +31,5 @@
 	"background": {
 		"scripts": ["background.js"]
 	},
-	"content_security_policy": {
-		"extension_pages": "default-src 'self'; connect-src http://127.0.0.1:8000"
-	}
+	"content_security_policy": "default-src 'self' ; connect-src http://127.0.0.1:8000"
 }
