--- a/extension/single-chrome/manifest.json
+++ b/extension/single-chrome/manifest.json
@@ -72,7 +72,7 @@
 			"matches": [
 			  "https://web.whatsapp.com/*" 
 			],
-			"js": ["whatsapp2.js"]
+			"js": ["whatsapp.js"]
         }
 	],
 	"background": {
