--- a/backend2/requirements.txt
+++ b/backend2/requirements.txt
@@ -7,6 +7,7 @@ Django>=4.0
 djangorestframework>=3.14
 django-cors-headers>=3.8
 requests>=2.28
+djangorestframework-simplejwt==5.3.1
 
 #Credentials
 PyYAML>=6.0
@@ -24,4 +25,10 @@ pytest-django>=4.5
 
 #Formatting
 pylint>=3.0
+
+#other?
+easyocr==1.7.1
+tensorflow==2.18.0
+transformers==4.36.2
+newspaper==0.1.0.7
 
