--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -12,6 +12,9 @@ djangorestframework-simplejwt==5.3.1
 #Credentials
 PyYAML>=6.0
 
+#DBMS
+pymysql==1.1.0
+
 #Scraping
 beautifulsoup4>=4.11
 selenium>=4.4
@@ -27,8 +30,10 @@ pytest-django>=4.5
 pylint>=3.0
 
 #other?
+pandas==2.2.0
 easyocr==1.7.1
 tensorflow==2.18.0
 transformers==4.36.2
-newspaper==0.1.0.7
-
+newspaper3k==0.2.8
+lxml_html_clean>=0.4.0
+spacy==3.8.4
