--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,39 +1,162 @@
-# Requirements.txt for Crowd-Sourced Fake News/content
-
-#Base-Application
-Django>=4.0
-
-#Communications
-djangorestframework>=3.14
-django-cors-headers>=3.8
-requests>=2.28
-djangorestframework-simplejwt==5.3.1
-
-#Credentials
-PyYAML>=6.0
-
-#DBMS
-pymysql==1.1.0
-
-#Scraping
-beautifulsoup4>=4.11
-selenium>=4.4
-
-#Social Login
-django-allauth
-
-#Testing
-pytest>=7.1
-pytest-django>=4.5
-
-#Formatting
-pylint>=3.0
-
-#other?
-pandas==2.2.0
-easyocr==1.7.1
-tensorflow==2.18.0
-transformers==4.36.2
+absl-py==2.2.2
+annotated-types==0.7.0
+asgiref==3.8.1
+astroid==3.3.9
+astunparse==1.6.3
+attrs==25.3.0
+beautifulsoup4==4.13.4
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.21.0
+confection==0.1.5
+cryptography==44.0.3
+cssselect==1.3.0
+cymem==2.0.11
+dill==0.4.0
+Django==5.2
+django-allauth==65.7.0
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+easyocr==1.7.2
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+exceptiongroup==1.2.2
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.18.0
+flatbuffers==25.2.10
+fsspec==2025.3.2
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.71.0
+gunicorn==23.0.0
+h11==0.16.0
+h5py==3.13.0
+huggingface-hub==0.30.2
+idna==3.10
+imageio==2.37.0
+iniconfig==2.1.0
+isort==6.0.1
+jieba3k==0.35.1
+Jinja2==3.1.6
+joblib==1.4.2
+keras==3.9.2
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.4
+libclang==18.1.1
+lxml==5.4.0
+lxml_html_clean==0.4.2
+marisa-trie==1.2.1
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mdurl==0.1.2
+ml_dtypes==0.5.1
+mpmath==1.3.0
+murmurhash==1.0.12
+namex==0.0.9
+networkx==3.4.2
 newspaper3k==0.2.8
-lxml_html_clean>=0.4.0
-spacy==3.8.4
+ninja==1.11.1.4
+nltk==3.9.1
+numpy==2.1.3
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvcc-cu12==12.5.82
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+opencv-python-headless==4.11.0.86
+opt_einsum==3.4.0
+optree==0.15.0
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+platformdirs==4.3.7
+pluggy==1.5.0
+preshed==3.0.9
+protobuf==5.29.4
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
+PyJWT==2.9.0
+pylint==3.3.6
+PyMySQL==1.1.1
+PySocks==1.7.1
+pytest==8.3.5
+pytest-django==4.11.1
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-file==2.1.0
+rich==14.0.0
+safetensors==0.5.3
+scikit-image==0.25.2
+scipy==1.15.2
+selenium==4.31.0
+sgmllib3k==1.0.0
+shapely==2.1.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+spacy==3.8.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+sqlparse==0.5.3
+srsly==2.5.1
+sympy==1.13.3
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.0.1
+tf_keras==2.19.0
+thinc==8.3.6
+tifffile==2025.3.30
+tinysegmenter==0.3
+tldextract==5.3.0
+tokenizers==0.21.1
+tomli==2.2.1
+tomlkit==0.13.2
+torch==2.7.0
+torchvision==0.22.0
+tqdm==4.67.1
+transformers==4.51.3
+trio==0.30.0
+trio-websocket==0.12.2
+triton==3.3.0
+typer==0.15.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+wasabi==1.1.3
+weasel==0.4.1
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wrapt==1.17.2
+wsproto==1.2.0
